<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/error_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/error"
        android:contentDescription="error"
        android:scaleType="center"
        />
    <TextView
        android:id="@+id/drivers_not_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/CustomTextHugeBlack"
        android:layout_marginTop="30dp"
        android:text="@string/drivers_not_found"
        />
    <TextView
        android:id="@+id/try_again_text"
        android:paddingStart="57dp"
        android:paddingEnd="57dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/CustomTextBigGray"
        android:text="@string/try_call_again"
        android:textAlignment="center"
        />
    <Button
        android:id="@+id/close_but_nfound"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_but_red"
        android:layout_marginTop="30dp"
        android:text="@string/close"
        />
</LinearLayout>