<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="false"
    >

    <LinearLayout
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_hideable="false"
        android:layout_gravity="center_horizontal"
        android:background="@color/white">
    <EditText
        android:id="@+id/from_input"
        android:background="@drawable/custom_view_black_corners"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/from"
        android:paddingStart="16dp"
        android:layout_marginTop="18dp"
        />
    <TextView
        android:id="@+id/from_er"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingStart="6dp"
        android:textAppearance="@style/CustomTextNormalRed"
        />
    <EditText
        android:id="@+id/to_input"
        android:background="@drawable/custom_view_black_corners"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/to"
        android:paddingStart="16dp"
        android:layout_marginTop="6dp"
        />
    <TextView
        android:id="@+id/to_er"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:paddingStart="6dp"
        android:textAppearance="@style/CustomTextNormalRed"
        />
    <HorizontalScrollView
        android:id="@+id/offers_list"
        android:layout_width="match_parent"
        android:layout_height="104dp"
        >
        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/tariff_cheap"
                android:layout_width="75dp"
                android:layout_height="68dp"
                android:background="@drawable/custom_view_black_inactive"
                android:text="@string/cheap_cost"
                android:textAppearance="@style/CustomTextNormalBlack"
                />

            <Button
                android:id="@+id/tariff_medium"
                android:layout_width="75dp"
                android:layout_height="68dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/custom_view_black_inactive"
                android:text="@string/medium_cost"
                android:textAppearance="@style/CustomTextNormalBlack"
                />

            <Button
                android:id="@+id/tariff_expencive"
                android:layout_width="75dp"
                android:layout_height="68dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/custom_view_black_inactive"
                android:text="@string/expensive_cost"
                android:textAppearance="@style/CustomTextNormalBlack"
                />
        </LinearLayout>
    </HorizontalScrollView>
    <Button
        android:id="@+id/offer_but"
        android:background="@drawable/custom_but_blue_inactive"
        android:enabled="false"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="@style/CustomTextButtonWhite"
        android:text="@string/to_offer"
        android:layout_marginBottom="18dp"
        />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>