<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_trip"
        android:textAppearance="@style/CustomTextHugeBlack"
        android:layout_gravity="center_horizontal"
        />
    <com.example.clientapp.mainPart.FiveStarsView
        android:id="@+id/stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        />
    <EditText
        android:id="@+id/review_text"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:hint="@string/send_review"
        android:layout_marginTop="50dp"
        android:lines="4"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="18dp"
        >
        <Button
            android:id="@+id/send_but_rev"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_but_blue"
            android:textAppearance="@style/CustomTextButtonWhite"
            android:text="@string/send"
            />
        <Button
            android:id="@+id/close_but_rev"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:text="@string/canceling"
            android:textAppearance="@style/CustomTextButtonBack"
            android:background="@drawable/custom_but_red"
            android:layout_marginStart="14dp"
            />
    </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>