<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">
    <ImageView
        android:id="@+id/success_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/success"
        android:contentDescription="success"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:scaleType="center"
        />
    <TextView
        android:id="@+id/drivers_not_found_text"
        android:layout_below="@id/success_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/CustomTextHugeBlack"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/road_is_ended"
        />
    <LinearLayout
        android:id="@+id/offer_t"
        android:layout_below="@id/drivers_not_found_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_offer"
            android:textAppearance="@style/CustomTextSmallBlack"/>
        <TextView
            android:id="@+id/offer_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CustomTextButtonBlue"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/going_t"
        android:layout_below="@id/offer_t"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_going"
            android:textAppearance="@style/CustomTextSmallBlack"/>
        <TextView
            android:id="@+id/going_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CustomTextButtonBlue"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/end_t"
        android:layout_below="@id/going_t"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_end"
            android:textAppearance="@style/CustomTextSmallBlack"/>
        <TextView
            android:id="@+id/end_time_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CustomTextButtonBlue"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_below="@id/end_t"
        >
        <Button
            android:id="@+id/close_but_end"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textAppearance="@style/CustomTextButtonBack"
            android:background="@drawable/custom_but_red"
            />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/review_anchor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>