<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:id="@+id/driver_wait_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_wait"
        android:textAppearance="@style/CustomTextHugeBlack"
        android:paddingTop="20dp"
        android:layout_centerVertical="true"
        />

    <TextView
        android:id="@+id/await_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/driver_wait_text"
        android:text="@string/comes_to_you"
        android:textAppearance="@style/CustomTextNormalGray"
        />

    <LinearLayout
        android:id="@+id/car_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/await_text"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CustomTextSmallBlack"
            />
        <TextView
            android:id="@+id/car_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CustomTextNormalBlack"
            android:layout_marginStart="6dp"
            android:background="@drawable/custom_gray_background"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/from_text_found"
        android:background="@drawable/custom_view_black_inactive"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="16dp"
        android:layout_marginTop="18dp"
        android:inputType="none"
        android:layout_below="@id/car_description"
        />
    <EditText
        android:id="@+id/to_text_found"
        android:background="@drawable/custom_view_black_inactive"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="16dp"
        android:layout_marginTop="18dp"
        android:inputType="none"
        android:layout_below="@id/from_text_found"
        />
    <Button
        android:id="@+id/cancel_found_but"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:background="@drawable/custom_but_red"
        android:textAppearance="@style/CustomTextButtonBack"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_below="@id/to_text_found"
        />
</RelativeLayout>