<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/white">
    <TextView
        android:id="@+id/on_road_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_road"
        android:textAppearance="@style/CustomTextHugeBlack"
        android:paddingTop="20dp"
        />

    <LinearLayout
        android:id="@+id/car_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/on_road_text"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/car_name_onroad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/CustomTextSmallBlack"
            />
        <TextView
            android:id="@+id/car_number_onroad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/CustomTextNormalBlack"
            android:layout_marginStart="6dp"
            android:background="@drawable/custom_gray_background"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/offer_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/car_description"
        android:layout_marginTop="36dp"
        >
        <TextView
            android:id="@+id/offer_time_road_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_offer"
            android:textAppearance="@style/CustomTextBigGray"
            />
        <TextView
            android:id="@+id/offer_time_road"
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textAppearance="@style/CustomTextDarkGray"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/going_time_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/offer_time_layout"
        android:layout_marginTop="12dp"
        >
        <TextView
            android:id="@+id/going_time_road_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_of_going"
            android:textAppearance="@style/CustomTextBigGray"
            />
        <TextView
            android:id="@+id/going_time_road"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginStart="6dp"
            android:textAppearance="@style/CustomTextDarkGray"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/from_text_onr"
        android:background="@drawable/custom_view_black_inactive"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="16dp"
        android:layout_marginTop="18dp"
        android:inputType="none"
        android:editable="false"
        android:layout_below="@id/going_time_layout"
        />
    <EditText
        android:id="@+id/to_text_onr"
        android:background="@drawable/custom_view_black_inactive"
        android:layout_width="357dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:paddingStart="16dp"
        android:layout_marginTop="18dp"
        android:inputType="none"
        android:editable="false"
        android:layout_below="@id/from_text_onr"
        />
</RelativeLayout>